--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,7 @@
 
 /* Customize logo/header image size */
 .site-header img,
-.header img {
-  margin-bottom: 30px;
-}
+.header img,
 .logo img {
   width: 20px;  /* Adjust this value */
   height: 20px; /* Adjust this value */
